nacl.tf
resource "aws_network_acl" "NACL" {
  vpc_id = aws_vpc.devVPC.id

  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  tags = {
    Name = "NACL"
  }
}
resource "aws_network_acl_association" "NACL" {
  network_acl_id = aws_network_acl.NACL.id
  subnet_id      = aws_subnet.devVPC_public_subnet2.id
}
